--- a/AllSpice.client/index.html
+++ b/AllSpice.client/index.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066" />
+  <link rel="stylesheet" href="//cdn.materialdesignicons.com/6.9.96/css/materialdesignicons.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
   <title>
     AllSpice.client
   </title>
@@ -16,7 +20,7 @@
     <strong>We're sorry but AllSpice.client doesn't work properly without JavaScript
       enabled. Please enable it to continue.</strong>
   </noscript>
-  <div id="app"></div>
+  <div class="position-relative" id="app"></div>
   <!-- built files will be auto injected -->
   <script type="module" src="./src/main.js"></script>
 </body>
